fixed project section extra space

--- a/style.css
+++ b/style.css
@@ -376,19 +376,18 @@ article .icon {
   border-color: rgb(163, 163, 163);
   background: rgb(250, 250, 250);
 }
+.about-containers-project {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); 
+  gap: 20px; /* Space between cards */
+  margin: 20px auto;
+  padding: 10px;
+}
 
 .project-img {
   border-radius: 2rem;
   max-width: 100%; 
   height: auto;
-}
-
-.project-details-container {
-  display: grid;
-  grid-template-columns: auto auto auto; 
-  gap: 20px; /* Space between cards */
-  margin: 20px auto;
-  padding: 10px;
 }
 
 .project-title {
@@ -426,13 +425,43 @@ article .icon {
   display: block;
 }
 
-/* 
-.close-btn {
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
   float: right;
-  font-size: 24px;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
   cursor: pointer;
-  color: red;
-} */
+}
 
 
 /* CONTACT */
@@ -440,7 +469,7 @@ article .icon {
 #contact {
   position: relative;
   display: flex;
-  margin-top: 45rem;
+  margin-top: 5rem;
   justify-content: center;
   flex-direction: column;
   height: 70vh;
